[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "langchain-openai>=0.3.28",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
]
